--- a/Tanuki/templates/html/filter.css
+++ b/Tanuki/templates/html/filter.css
@@ -1,19 +1,20 @@
-.filter-category-complexity > li,
-.filter-engine-rubocop > li,
-.filter-engine-structure > li,
-.filter-none > li {
-  display: none;
-}
+.filter-category-assets > li,
+.filter-category-performance > li,
+.filter-engine-enforcer > li,
+.filter-engine-project_auditor > li,
+.filter-none > li { display: none; }
 
-.filter-category-all.filter-engine-rubocop > li[data-engine="rubocop"],
-.filter-category-all.filter-engine-structure > li[data-engine="structure"],
-.filter-category-complexity.filter-engine-all > li[data-categories~="complexity"],
+.filter-category-all.filter-engine-enforcer > li[data-engine="enforcer"],
+.filter-category-all.filter-engine-project_auditor > li[data-engine="project_auditor"],
+.filter-category-assets.filter-engine-all > li[data-categories~="assets"],
+.filter-category-performance.filter-engine-all > li[data-categories~="performance"],
 .filter-category-all.filter-engine-all > li[data-categories~="all"][data-engine="all"],
-.filter-category-all.filter-engine-rubocop > li[data-categories~="all"][data-engine="rubocop"],
-.filter-category-all.filter-engine-structure > li[data-categories~="all"][data-engine="structure"],
-.filter-category-complexity.filter-engine-all > li[data-categories~="complexity"][data-engine="all"],
-.filter-category-complexity.filter-engine-rubocop > li[data-categories~="complexity"][data-engine="rubocop"],
-.filter-category-complexity.filter-engine-structure > li[data-categories~="complexity"][data-engine="structure"],
-.filter-category-all.filter-engine-all > li {
-  display: block;
-}
+.filter-category-all.filter-engine-enforcer > li[data-categories~="all"][data-engine="enforcer"],
+.filter-category-all.filter-engine-project_auditor > li[data-categories~="all"][data-engine="project_auditor"],
+.filter-category-assets.filter-engine-all > li[data-categories~="assets"][data-engine="all"],
+.filter-category-assets.filter-engine-enforcer > li[data-categories~="assets"][data-engine="enforcer"],
+.filter-category-assets.filter-engine-project_auditor > li[data-categories~="assets"][data-engine="project_auditor"],
+.filter-category-performance.filter-engine-all > li[data-categories~="performance"][data-engine="all"],
+.filter-category-performance.filter-engine-enforcer > li[data-categories~="performance"][data-engine="enforcer"],
+.filter-category-performance.filter-engine-project_auditor > li[data-categories~="performance"][data-engine="project_auditor"],
+.filter-category-all.filter-engine-all > li { display: block; }
