--- a/Tanuki/templates/html/gl-code-quality-report.html
+++ b/Tanuki/templates/html/gl-code-quality-report.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Code Climate Report for <%= project.name %>
@@ -19,8 +18,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/plugins/line-numbers/prism-line-numbers.min.css" />
 		<link rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/plugins/line-highlight/prism-line-highlight.min.css" />
-		<link rel="stylesheet" href="styles.css">
-		<link rel="stylesheet" href="filter.css">
+		<!-- JavaScript -->
 		<script>
 			/**
 			 * Report JS
@@ -176,8 +174,404 @@
 				});
 			});
 		</script>
-	</head>
+		<!-- Stylesheet -->
+		<style>
+			/**
+			* prism.js Code Climate theme based on Coy theme (modified)
+			*/
+			code[class*="language-"],
+			pre[class*="language-"] {
+				color: black;
+				font-family: "GitLab Mono", "JetBrains Mono", Menlo, "DejaVu Sans Mono", "Liberation Mono", Consolas, "Ubuntu Mono", "Courier New", "andale mono", "lucida console", monospace;
+				direction: ltr;
+				text-align: left;
+				white-space: pre;
+				word-spacing: normal;
+				word-break: normal;
+				tab-size: 4;
+				hyphens: none;
+				font-size: 12px;
+			}
 
+			pre[class*="language-"] {
+				position: relative;
+				background-color: #fdfdfd;
+				background-image: linear-gradient(rgba(69, 142, 209, 0.0) 50%, rgba(69, 142, 209, 0.04) 50%);
+				background-size: 3em 3em;
+				background-origin: content-box;
+				overflow: hidden;
+				/*border: 1px solid #dde8ef;*/
+				margin-top: 1em;
+			}
+
+			pre>code[class*="language-"] {
+				display: block;
+				z-index: 100;
+			}
+
+			/* Inline code */
+			:not(pre)>code[class*="language-"] {
+				position: relative;
+				padding: .2em;
+				-webkit-border-radius: 0.3em;
+				-moz-border-radius: 0.3em;
+				-ms-border-radius: 0.3em;
+				-o-border-radius: 0.3em;
+				border-radius: 0.3em;
+			}
+
+			.token.comment,
+			.token.block-comment,
+			.token.prolog,
+			.token.doctype,
+			.token.cdata {
+				color: #999988;
+			}
+
+			.token.punctuation {
+				font-weight: bold;
+			}
+
+			.token.constant {
+				color: #555555
+			}
+
+			.token.symbol {
+				color: #990073;
+			}
+
+			.token.number {
+				color: #009999;
+			}
+
+			.token.property,
+			.token.tag,
+			.token.boolean,
+			.token.function-name,
+			.token.deleted {
+				color: #c92c2c;
+			}
+
+			.token.string {
+				color: #D14
+			}
+
+			.token.selector,
+			.token.attr-name,
+			.token.builtin,
+			.token.inserted {
+				color: #2f9c0a;
+			}
+
+			.token.variable {
+				color: #008080;
+			}
+
+			.token.operator {
+				font-weight: bold;
+			}
+
+			.token.entity,
+			.token.url {
+				color: #a67f59;
+			}
+
+			.token.keyword {
+				font-weight: bold;
+			}
+
+			.token.class-name {
+				color: #445588;
+				font-weight: bold;
+			}
+
+			.token.atrule,
+			.token.attr-value {
+				color: #1990b8;
+			}
+
+			.token.regex {
+				color: #808000;
+			}
+
+			.token.important {
+				color: #e90;
+			}
+
+			.style .token.string {
+				color: #a67f59;
+				background: rgba(255, 255, 255, 0.5);
+			}
+
+			.token.important {
+				font-weight: normal;
+			}
+
+			.token.entity {
+				cursor: help;
+			}
+
+			.namespace {
+				opacity: .7;
+			}
+
+			pre.line-numbers {
+				position: relative;
+				padding-left: 40px;
+				counter-reset: linenumber;
+			}
+
+			pre.line-numbers>code {
+				position: relative;
+				padding-left: 4px;
+			}
+
+			.line-numbers .line-numbers-rows {
+				position: absolute;
+				pointer-events: none;
+				top: 0;
+				font-size: 100%;
+				left: -3.8em;
+				width: 3.8em;
+				/* works for line-numbers below 1000 lines */
+				letter-spacing: -1px;
+				padding-top: 1px;
+				user-select: none;
+				background-color: #f1f1f1;
+				color: #757575;
+			}
+
+			.line-numbers-rows>span {
+				pointer-events: none;
+				display: block;
+				counter-increment: linenumber;
+			}
+
+			.line-numbers-rows>span:before {
+				content: counter(linenumber);
+				color: #999;
+				display: block;
+				padding-right: 0.8em;
+				text-align: right;
+			}
+
+			/**
+			* Report styles
+			*/
+			html,
+			body {
+				font-size: 16px;
+				line-height: 1.333;
+				background: #ffffff;
+				color: #323543;
+				font-family: "GitLab Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Noto Sans", Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+				font-style: normal;
+				font-weight: normal;
+				min-width: 960px;
+				margin: 0;
+				padding: 0;
+			}
+
+			a {
+				border-bottom-color: rgba(89, 67, 182, .24);
+				border-bottom-style: solid;
+				border-bottom-width: 1px;
+				color: #5943b6;
+				text-decoration: none;
+			}
+
+			a:hover {
+				color: #303470;
+				border-bottom-color: rgba(89, 67, 182, 1);
+			}
+
+			.container {
+				width: 960px;
+				margin: 0 auto;
+			}
+
+			#top {
+				color: #fff;
+				background: rgb(34, 34, 97);
+				padding: 5px 0;
+			}
+
+			#logo {
+				background: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22144%22%20height%3D%22144%22%20viewBox%3D%220%200%20144%20144%22%3E%3Cg%20fill%3D%22%23FFF%22%3E%3Cpath%20d%3D%22M93.548%2037.327L69.856%2061.02l14.09%2014.09%209.602-9.6%2027.243%2027.243%2014.09-14.092M65.483%2065.393l-14.03-14.03-35.78%2035.783-5.554%205.552%2014.09%2014.09%205.553-5.552%2018.14-18.138%203.55-3.552%2014.03%2014.028%2013.214%2013.216%2014.09-14.093-13.215-13.213%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E') center center no-repeat;
+				background-size: 35px 40px;
+				height: 40px;
+				width: 40px;
+				display: inline-block;
+				overflow: hidden;
+				text-indent: -99999px;
+				color: #fff;
+				vertical-align: middle;
+			}
+
+			#top h1 {
+				display: inline-block;
+				font-size: 20px;
+				font-weight: black;
+				margin: 0;
+				vertical-align: middle;
+			}
+
+			nav ul,
+			#smells {
+				margin: 0;
+				padding: 0;
+			}
+
+			nav li {
+				list-style: none;
+				padding: 10px 20px;
+				color: #5e637d;
+				position: relative;
+				display: inline-block;
+			}
+
+			nav li::after {
+				content: '';
+				position: absolute;
+				border-bottom: 8px solid #fff;
+				border-left: 8px solid transparent;
+				border-right: 8px solid transparent;
+				bottom: 0px;
+				left: 50%;
+				margin-left: -8px;
+			}
+
+			#main-container {
+				background: #fff;
+				padding: 20px;
+				overflow: hidden;
+				position: relative;
+			}
+
+			.issue-filters {
+				color: rgb(58, 56, 63);
+				float: right;
+				width: 200px;
+				font-weight: 600;
+			}
+
+			.issue-filters label {
+				font-weight: 700;
+				margin-top: 10px;
+			}
+
+			.issue-filters label,
+			.issue-filters select {
+				display: block;
+				width: 100%;
+			}
+
+			#smells {
+				max-width: 680px;
+			}
+
+			#smells>li {
+				list-style: none;
+				border-bottom: 1px solid #dcdcde;
+				padding-top: 10px;
+				padding-bottom: 20px;
+			}
+
+			#smells>li:last-of-type {
+				border-bottom: 0px none;
+				padding-bottom: 0;
+			}
+
+			#smells .smells-title {
+				white-space: nowrap;
+				position: absolute;
+				left: 0px;
+			}
+
+			#smells>li>h2 {
+				color: rgb(34, 34, 97);
+				font-weight: bold;
+				margin-top: 0;
+				font-size: inherit;
+			}
+
+			#smells .code {
+				position: relative;
+				overflow: hidden;
+				border-radius: 3px;
+				border: 1px solid #dde8ef;
+				height: 6em;
+				margin: 10px 0;
+			}
+
+			#smells .code>pre {
+				visibility: hidden;
+			}
+
+			#smells .code>pre,
+			#smells .code>pre .line-highlight {
+				margin-bottom: 0;
+				margin-top: 0;
+				padding-bottom: 0;
+				padding-top: 0;
+			}
+
+			.found-in {
+				font-size: 12px;
+				line-height: 20px;
+				color: #9999a1;
+				margin-top: 10px;
+				padding-left: 10px;
+				margin-bottom: 15px;
+				border-left-color: #fca326;
+				border-left-style: solid;
+				border-left-width: 2px;
+			}
+
+			::-webkit-details-marker {
+				display: none;
+			}
+
+			details summary {
+				display: block;
+			}
+
+			details summary::before {
+				content: "► ";
+
+			}
+
+			details[open] summary::before {
+				content: "▼ ";
+			}
+
+			#filtered-out-message {
+				display: none;
+				text-align: center;
+				position: absolute;
+				left: 0;
+				width: 720px;
+				text-align: center;
+				top: 50%;
+				margin-top: -1em;
+				line-height: 2em;
+			}
+
+			#no-issues-message {
+				text-align: center;
+			}
+
+			#no-issues-message::before {
+				content: "🎉";
+				font-size: 3em;
+				display: block;
+			}
+		</style>
+		<!-- Filters -->
+		<style>
+			<%=filter.css -%>
+		</style>
+	</head>
 	<body>
 		<header id="top">
 			<div class="container">
