--- a/Tanuki/templates/html/partials/smell.html
+++ b/Tanuki/templates/html/partials/smell.html
@@ -1,7 +1,9 @@
 <li
 	data-categories="<%= issue.category_slug %>"
 	data-engine="<%= issue.engine_slug %>">
-	<h2><span class="smells-title"><svg width="12" height="12"><image xlink:href="assets/severity-<%= issue.severity %>.svg"/></svg></span><%= issue.title %></h2>
+	<h2>
+		<span class="smells-title"><svg width="12" height="12"><%= issue.icon %></svg></span><%= issue.title %>
+	</h2>
 	<%= issue.body -%>
 	<div class="found-in">
 		<%= found-in -%>
