--- a/Tanuki/templates/html/gl-code-quality-report.html
+++ b/Tanuki/templates/html/gl-code-quality-report.html
@@ -373,7 +373,7 @@
 				padding: 0;
 			}
 
-			a {
+			body > a {
 				border-bottom-color: rgba(89, 67, 182, .24);
 				border-bottom-style: solid;
 				border-bottom-width: 1px;
@@ -381,7 +381,7 @@
 				text-decoration: none;
 			}
 
-			a:hover {
+			body > a:hover {
 				color: #303470;
 				border-bottom-color: rgba(89, 67, 182, 1);
 			}
